(borked) Add Boost libs

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.21)
 project( PDI )
-find_package( OpenCV REQUIRED )
-include_directories( ${OpenCV_INCLUDE_DIRS} )
+find_package( OpenCV 4.5 REQUIRED )
+message(STATUS "OpenCV version: ${OpenCV_VERSION}")
+find_package( Boost 1.76 REQUIRED )
+message(STATUS "Boost version: ${Boost_VERSION}")
+include_directories( ${OpenCV_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS} )
 add_executable( PDI main.cpp image_arithmatic.cpp)
-target_link_libraries( PDI ${OpenCV_LIBS} )
+target_link_libraries( PDI ${OpenCV_LIBS} ${Boost_LIBS})
