deps: remove dependency on Boost

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,8 +2,6 @@ cmake_minimum_required(VERSION 3.16)
 project( PDI )
 find_package( OpenCV 4.5 REQUIRED )
 message(STATUS "OpenCV version: ${OpenCV_VERSION}")
-find_package( Boost 1.71 REQUIRED )
-message(STATUS "Boost version: ${Boost_VERSION}")
-include_directories( ${OpenCV_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS} )
+include_directories( ${OpenCV_INCLUDE_DIRS} )
 add_executable( PDI main.cpp image_arithmatic.cpp basic_operations.cpp image_operations.cpp)
-target_link_libraries( PDI ${OpenCV_LIBS} ${Boost_LIBS})
+target_link_libraries( PDI ${OpenCV_LIBS})
